# seshan-xyz-v4

./: Cargo.toml  EDITBIN.BAT  README.md  package.json
.cargo/: config.toml
content/: index.md  seshanxyz.toml
content/blog/: 2018-11-12-hello-world-2.md  2018-11-13-direct-post-access.md  2018-11-17-building-the-perfect-gnu-linux-distro.md  2018-12-02-live-production-with-bmd-atem-software-on-linux.md  2018-12-06-dang-it-aws-is-your-instance-ip-changing-get-an-elastic-ip.md  2018-12-08-the-iot-christmas-tree-ft-ubuntu-core.md  2018-12-10-we-got-an-atom-rss-feed-who-asked-for-this-again.md  2018-12-12-windows-server-on-kvm-in-docker-on-digitalocean.md  2018-12-21-48.md  2019-01-01-lets-revive-ipodlinux.md  2019-01-06-where-is-my-framebuffer-on-a-pixel-3-new-android-devices.md  2019-01-16-the-ipod-2nd-gen-classic-2002.md  2019-02-12-im-still-alive-plus-some-updates.md  2019-03-24-59.md  2019-03-25-my-thoughts-after-using-macos.md  2019-04-20-installing-mac-os-x-10-9-on-a-amd-a10-5800k-and-quadro-600-as-a-server.md  2019-05-21-hello-world.md  2019-05-22-website-upgrades-powerpc-wordpress-tor-oh-my.md  2019-05-23-.md  2019-05-23-how-to-fix-php-wordpress-curl-errors.md  2019-05-28-installing-windows-xp-on-digitalocean.md  2019-06-06-android-debugging-over-usb-with-expo-react-native.md  2019-06-07-react-native-ios-pods-header-files-not-found-try-this.md  2019-06-08-wordpress-performance-tip-use-the-system-cron.md  2019-06-09-spotify-on-mac-os-x-snow-leopard-it-still-works.md  2019-06-10-.md  (+27 more)
src/: main.rs
templates/: base.hbs  blog-index.hbs  blog-post.hbs  index.hbs
(+2 files in other folders)
