[package]
name = "seshanxyz_rust9x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-cgi = "0.6"
matchit = "0.7.3"
toml = "0.8.10"
infer = "0.15.0"
mime_guess = "2.0.4"
handlebars = "5.1.0"
comrak = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc_version_runtime = "0.3.0"
os_info = "3.7.0"
winapi = "0.3.9"